# MPI-Parallel-Multiscale-Diffusion-FEM

./: .gitignore  CMakeLists.txt  LICENSE  README.md
contrib/utilities/: indent  indent_common.sh
doc/: Doxyfile
doc/pages/: mainpage.dox
include/: basis_q1.hpp  coefficients.h  config.h  diffusion_problem.hpp  diffusion_problem_basis.hpp  diffusion_problem_ms.hpp  dirichlet_bc.hpp  matrix_coeff.hpp  neumann_bc.hpp  right_hand_side.hpp
include/base/: diffusion_problem.hpp  diffusion_problem.tpp  diffusion_problem_basis.hpp  diffusion_problem_basis.tpp  diffusion_problem_ms.hpp  diffusion_problem_ms.tpp
include/coefficients/: basis_q1.hpp  basis_q1.tpp  basis_q1.tpp~  coefficients.h  dirichlet_bc.hpp  dirichlet_bc.tpp  matrix_coeff.hpp  matrix_coeff.tpp  neumann_bc.hpp  neumann_bc.tpp  right_hand_side.hpp  right_hand_side.tpp
source/: CMakeLists.txt  DiffusionProblem.cc  main.cxx
source/base/: diffusion_problem.inst.cc  diffusion_problem_basis.inst.cc  diffusion_problem_ms.inst.cc
source/coefficients/: basis_q1.inst.cc  basis_q1.inst.cc~  dirichlet_bc.inst.cc  matrix_coeff.inst.cc  matrix_coeff.inst.cc~  neumann_bc.inst.cc  right_hand_side.inst.cc
test/: CMakeLists.txt  test_dummy.cc  test_dummy.mpirun=1.output  test_dummy.mpirun=2.output
